--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
-*/
- /* reset */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
 article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
 ol,ul{list-style:none;margin:0;padding:0;}
@@ -273,6 +266,8 @@ body {
 .view img {
    display: block;
    position: relative;
+   width: 100%;
+   height: 100%;
 }
 .view h2 {
    text-transform: uppercase;
@@ -324,8 +319,16 @@ body {
    filter: alpha(opacity=100);
    opacity: 1;
 }
+
+::-webkit-scrollbar {
+	width: 1px;
+	background: #050505;
+  }
+  
+
 .view-fourth .mask {
    background-color: rgba(0,0,0,0.8);
+   overflow: auto;
    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
    opacity: 0;
@@ -371,6 +374,7 @@ body {
    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
    opacity: 0;
+   margin-bottom: 10px;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
@@ -1000,6 +1004,9 @@ display:none;
 	}
 	.nav {
 		display: block;
+	}
+	.info{
+		margin-bottom: 100px;
 	}
 	.h_right{
 		width: 100%;
