--- a/css/style.css
+++ b/css/style.css
@@ -656,6 +656,19 @@ body {
 .team-info strong{
 	font-weight: bold;
 }
+.menEnv{
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex: 1;
+	justify-content: center;
+	align-items: center;
+	transition: 1s;
+}
+
+.menEnv img{
+	width: 100px;
+}
 /*--//team-info--*/
 .top-social-icons li{
 	display: inline-block;
@@ -1267,4 +1280,8 @@ display:none;
 	.form-text {
 		width: 100%;
 	}
+}
+
+.active{
+	display: none;
 }
