--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,39 +1,22 @@
 .header-wrapper {
   width: 80vw;
-  margin-top: 10vh;
+  margin-top: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media only screen and (max-width: 500px){
+      width: 100vw;
+  }
 
   h2 {
-    font-size: clamp(22px, 2vw ,24px);
+    font-size: clamp(16px, 2vw ,24px);
     text-align: center;
-    @include media(">=phone", "<lgphone") {
-      font-size: 14px;
-    }
-    @include media(">=lgphone", "<tablet") {
-      font-size: 16px;
-    }
-    @include media(">=tablet", "<desktop") {
-      font-size: 16px;
-    }
   }
   .heading-wrapper {
     h1 {
-      font-size: 4rem;
+      font-size: clamp(24px, 4vw ,10em);
       text-align: center;
       line-height: 20px;
-      @include media(">=phone", "<lgphone") {
-        font-size: 1.5rem;
-        line-height: 10px;
-      }
-      @include media(">=lgphone", "<tablet") {
-        font-size: 1.5rem;
-        line-height: 10px;
-      }
-      @include media(">=tablet", "<desktop") {
-        font-size: 2.5rem;
-      }
     }
   }
   p {
@@ -41,17 +24,5 @@
     text-align: center;
     overflow: hidden;
     font-size: clamp(16px, 2vw ,23px);
-    @include media(">=phone", "<lgphone") {
-      font-size: 12px;
-      width: 100%;
-    }
-    @include media(">=lgphone", "<tablet") {
-      font-size: 12px;
-      width: 100%;
-    }
-    @include media(">=tablet", "<desktop") {
-      font-size: 14px;
-      width: 100%;
-    }
   }
 }
